fixing alignment

--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -42,7 +42,7 @@
       border-radius: 20px;
       padding: 20px;
       width: 300px;
-      top: -120px;
+      top: -130px;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
